[gd_scene load_steps=4 format=2]

[ext_resource path="res://2d-dados/icon.png" type="Texture" id=1]
[ext_resource path="res://2d-dados/castillo.png" type="Texture" id=2]
[ext_resource path="res://2d-galletas/gallata.gd" type="Script" id=3]

[node name="ga2" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -33.0
margin_top = -33.0
margin_right = 31.0
margin_bottom = 31.0

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -20 )

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
